Product sync default culture fix, another minor fixes
